[package]
name = "RustBlog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.0"
dotenv = "0.15"
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
rand = "0.8.5"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
